# Claude-Pulse

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
packaging/: com.claudepulse.menubar.plist
packaging/ClaudePulseBar/: build.sh  main.swift
src/claude_pulse/: __init__.py  __main__.py  cli.py  config.py  cost.py  menubar.py  models.py
src/claude_pulse/data/: browse.py  conversations.py  history.py  limits.py  sessions.py  stats.py
src/claude_pulse/views/: daily.py  monthly.py  realtime.py  sessions.py
tests/: test_browse.py  test_menubar.py
