[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-pulse"
version = "0.1.0"
description = "Monitor your Claude Code usage with clean terminal dashboards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Ahmed Al Buessa" }]
keywords = ["claude", "claude-code", "usage", "monitor", "terminal", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
acp = "claude_pulse.cli:main"
claude-pulse = "claude_pulse.cli:main"

[project.urls]
Homepage = "https://github.com/AhmedAlBuessa/Claude-Pulse"
Repository = "https://github.com/AhmedAlBuessa/Claude-Pulse"
Issues = "https://github.com/AhmedAlBuessa/Claude-Pulse/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_pulse"]
